--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mt-webpack-demo",
   "version": "1.0.0",
-  "description": "我的webpack的练手项目",
+  "description": "我的webpack练手项目",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
