--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.1",
     "url-loader": "^4.1.0",
+    "vue-loader": "^15.9.2",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.11"
   }
 }
